--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,15 @@
     "@aws-sdk/s3-request-presigner": "^3.968.0",
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.4",
+    "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "styled-components": "^6.2.0",
-    "uuidv4": "^6.2.13"
+    "use-debounce": "^10.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
