--- a/server/package.json
+++ b/server/package.json
@@ -5,28 +5,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "clean": "rm -r dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.969.0",
+    "@aws-sdk/s3-request-presigner": "^3.969.0",
+    "@types/cors": "^2.8.19",
     "@types/express-serve-static-core": "^5.1.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "~7.0.0",
     "mongoose": "^9.1.2",
+    "multer": "^2.0.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.5",
+    "jest": "^29.7.0",
+    "cors": "^2.8.5",
     "nodemon": "^3.1.11",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
