--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/app.js",
     "dev": "nodemon",
-    "clean": "rm -r dist"
+    "rimraf": "rm -r dist"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "@aws-sdk/s3-request-presigner": "^3.969.0",
     "@types/cors": "^2.8.19",
     "@types/express-serve-static-core": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "~7.0.0",
@@ -29,15 +30,16 @@
     "tsx": "^4.21.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
     "@types/express": "^5.0.6",
+    "@types/jest": "^29.5.14",
+    "@types/module-alias": "^2.0.4",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.5",
     "jest": "^29.7.0",
-    "cors": "^2.8.5",
     "nodemon": "^3.1.11",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.3"
   }
 }
