--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
+
 server {
     listen 80;
-
-    server_name _;
+    server_name /;
 
     # Next.js frontend
     # location / {
@@ -13,10 +13,10 @@ server {
     #     proxy_cache_bypass $http_upgrade;
     # }
 
-    # Node backend
-    location /backend/ {
+    # Node api
+    location /api/ {
         proxy_pass http://server:8000;
-         rewrite ^/backend/?(.*)$ /$1 break;
+        rewrite ^/api/?(.*)$ /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
