chore: setup cert and update prod nginx

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,10 +2,14 @@ version: "3.9"
 
 services:
   server:
-    build: ./server
+    build: 
+     context: ./server
+     dockerfile: Dockerfile
     container_name: server
     expose:
       - "8000"
+    env_file:
+      - ./server/.env
     restart: always
 
   nginx:
@@ -15,7 +19,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.prod.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginx/certbot/www:/var/www/certbot
       - ./nginx/certbot/conf:/etc/letsencrypt
     depends_on:
@@ -24,6 +28,9 @@ services:
 
   certbot:
     image: certbot/certbot
+    container_name: certbot
     volumes:
       - ./nginx/certbot/www:/var/www/certbot
       - ./nginx/certbot/conf:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    restart: always
