--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,24 +1,29 @@
 server {
     listen 80;
-    server_name backend-xsurface-fullstack-developer-test.online;
+    server_name backend.backend-xsurface-fullstack-developer-test.online;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location / {
+     location / {
         return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name backend-xsurface-fullstack-developer-test.online;
+    server_name backend.backend-xsurface-fullstack-developer-test.online;
 
-    ssl_certificate /etc/letsencrypt/live/backend-xsurface-fullstack-developer-test.online/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/backend-xsurface-fullstack-developer-test.online/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/backend.backend-xsurface-fullstack-developer-test.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/backend.backend-xsurface-fullstack-developer-test.online/privkey.pem;
 
-    location /backend/ {
+    location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://server:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
